--- a/Project/Html/test.html
+++ b/Project/Html/test.html
@@ -1,59 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-.container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.row {
-  display: flex;
-  width: 50%;
-}
-
-.item {
-  margin: 10px;
-}
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-          <div class="item">
-            <input type="text">
-            <label>Label 1</label>
-          </div>
-          <div class="item">
-            <input type="text">
-            <label>Label 2</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="item">
-            <input type="text">
-            <label>Label 3</label>
-          </div>
-          <div class="item">
-            <input type="text">
-            <label>Label 4</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="item">
-            <input type="text">
-            <label>Label 5</label>
-          </div>
-          <div class="item">
-            <input type="text">
-            <label>Label 6</label>
-          </div>
-        </div>
-      </div>
-      
+  <button id="decrease">
+    decrease
+  </button>
+  <h1 id="year"></h1>
+  <button id="increase">
+    increase
+  </button>
+
+  <script>
+    const decrease = document.getElementById('decrease');
+    const increase = document.getElementById('increase');
+    const year = document.getElementById('year');
+    let yearValue = 2024;
+    year.textContent = yearValue;
+
+    decrease.addEventListener('click', function() {
+      yearValue--;
+      year.textContent = (yearValue);
+    })
+
+
+    increase.addEventListener('click', function() {
+      yearValue++;
+      year.textContent = (yearValue);
+    })
+  </script>
 </body>
 </html>
